feat(engine): 添加STORM Wiki引擎核心模块及流程时序图
- 新增STORM四阶段核心引擎模块，包括知识策展、大纲生成、文章生成和文章抛光
- 实现STORMWikiRunner主执行器，编排完整知识生成流程
- 新增STORMWikiLMConfigs及STORMWikiRunnerArguments配置管理
- 辅助细化各阶段方法，支持多视角对话、并发章节生成和文章抛光
- 补充模块间交互时序图，清晰展示流程执行步骤和数据流
- 完善注释说明，提升代码易读性和维护性

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,6 @@ dependencies = [
     "langchain-qdrant",
     "numpy",
     "litellm",
-    "diskcache"
+    "diskcache",
+    "pre-commit>=4.5.1",
 ]
